--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body.invalid svg.logo { color:#dc2626; }
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/addon/scroll/annotatescrollbar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/addon/search/matchesonscrollbar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/addon/search/jump-to-line.min.js"></script>
-<script src="https://unpkg.com/jsonlint-mod@1.7.6/lib/jsonlint.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jsonlint-mod@1.7.6/dist/jsonlint.min.js"></script>
 <script>
 const editor = CodeMirror.fromTextArea(document.getElementById('editor'), {
     mode: { name: 'javascript', json: true },
