Style headings in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body.invalid svg.logo { color:#dc2626; }
     <h1 class="text-2xl font-bold">YMS JSONLint</h1>
 </header>
 <div class="flex-1 pt-6 max-w-8xl mx-auto px-8 lg:px-10">
-    <h2 class="text-base mb-4">To format and validate your JSON, just copy + paste it below:</h2>
+    <h2 class="mb-4 text-xl font-semibold">To format and validate your JSON, just copy + paste it below:</h2>
     <div class="grid grid-cols-1 gap-4 xl:grid-cols-[minmax(932px,1fr),auto] xl:gap-12">
         <div class="min-w-4xl">
             <div id="jsonlint">
@@ -45,11 +45,11 @@ body.invalid svg.logo { color:#dc2626; }
                 </div>
             </div>
             <div class="block mt-10 mb-20">
-                <h2 class="mt-10">How to update a rule in YMS</h2>
+                <h2 class="mt-10 text-xl font-semibold">How to update a rule in YMS</h2>
                 <p>To update a rule in YMS, first login to your desired tenant. Next, navigate to Settings -> Rules. Search for the desired rule, and click "Edit". Next, past the output of YMS JSONLint into the "Value" text box and click "Submit". Always update rules in Staging environments first and perform a complete test before updating them in Production.</p>
-                <h2>What Is JSON?</h2>
+                <h2 class="mt-10 text-xl font-semibold">What Is JSON?</h2>
                 <p>JSON (pronounced as Jason), stands for "JavaScript Object Notation," is a human-readable and compact solution to represent a complex data structure and facilitate data interchange between systems. It's a widespread data format with a diverse range of applications enabled by its simplicity and semblance to readable text. As such, it's used by most but not all systems for communicating data.</p>
-                <h2>Why Use JSON?</h2>
+                <h2 class="mt-10 text-xl font-semibold">Why Use JSON?</h2>
                 <p>There are several reasons why you should consider using JSON, the key reason being that JSON is independent of your system's programming language, despite being derived from JavaScript. Not only is JSON language-independent, but it also represents data that speaks common elements of many programming languages, effectively making it into a universal data representation understood by all systems.</p>
                 <p>Other reasons include:</p>
                 <ul>
@@ -58,7 +58,7 @@ body.invalid svg.logo { color:#dc2626; }
                     <li>It's easy to analyze into logical syntactic components, especially in JavaScript.</li>
                     <li>Countless JSON libraries are available for most programming languages.</li>
                 </ul>
-                <h2>Proper JSON Format</h2>
+                <h2 class="mt-10 text-xl font-semibold">Proper JSON Format</h2>
                 <p>Using JSON doesn't require any JavaScript knowledge, though having such would only improve your understanding of JSON. And though the knowledge of JavaScript isn't necessary, following specific rules is:</p>
                 <ul>
                     <li>Data is in name/value pairs</li>
@@ -80,19 +80,19 @@ body.invalid svg.logo { color:#dc2626; }
                     <li>The mime type for JSON files is <code>application/json</code></li>
                 </ul>
                 <p>You can achieve proper JSON formatting by following these simple rules. However, if you're unsure about your code, we suggest using this JSONLint Validator and formatter.</p>
-                <h2>Why Use JSONLint Validator and Formatter?</h2>
+                <h2 class="mt-10 text-xl font-semibold">Why Use JSONLint Validator and Formatter?</h2>
                 <p>Programming can be challenging, as it requires enormous attention and excellent knowledge of the programming language, even as simple as JSON. Still, writing code is tricky, and finding an error in JSON code can be a challenging and time-consuming task.</p>
                 <p>The best way to find and correct errors while simultaneously saving time is to use an online tool such as JSONLint. JSONLint will check the validity of your JSON code, detect and point out line numbers of the code containing errors. It's an excellent way to correct errors without wasting hours finding a missing coma somewhere inside your code.</p>
-                <h2>How Does A JSONLint Validator Work?</h2>
+                <h2 class="mt-10 text-xl font-semibold">How Does A JSONLint Validator Work?</h2>
                 <p>JSONLint is an online editor, validator, and formatting tool for JSON, which allows you to directly type your code, copy and paste it, or input a URL containing your code. It will validate your JSON content according to JS standards, informing you of every human-made error, which happens for a multitude of reasons – one of them being the lack of focus.</p>
                 <p>Using JSONLint, you can quickly find any errors that might've occurred, allowing you to focus more on the rest of your code than on a tiny error itself.</p>
-                <h2>Tips & Tricks</h2>
+                <h2 class="mt-10 text-xl font-semibold">Tips & Tricks</h2>
                 <ul>
                     <li>You can use a URL and JSONLint will scrape it for JSON and parse it. Just structure the link like this, for example: <a href="/?url=/datasets/programming-languages.json"><code>/?url=/datasets/programming-languages.json</code></a></li>
                     <li>You can provide JSON to lint in the URL if you link to JSONLint with the <code>json</code> parameter. For example: <a href="/?json=%7B%22hello%22:%20%22world%22%7D"><code>/?json=%7B%22hello%22:%20%22world%22%7D</code></a>.</li>
                     <li>JSONLint can also be used as a JSON compressor/minifier. Just click on the "Compress" button above.</li>
                 </ul>
-                <h2>About JSONLint.com</h2>
+                <h2 class="mt-10 text-xl font-semibold">About JSONLint.com</h2>
                 <p>JSONLint was created by <a href="http://www.crockford.com/">Douglas Crockford</a> of JSON and JS Lint, and <a href="http://zaa.ch/">Zach Carter</a>, who built a <a href="https://github.com/zaach/jsonlint">pure JavaScript implementation</a>. You can download the <a href="https://www.github.com/circlecell/jsonlintdotcom">JSONLint source code on GitHub</a>.</p>
             </div>
         </div>
